Fix Spring Boot backend configuration and errors